Fixed Bugs with product descriptions containing HTML. ALong with overlapping issues

--- a/static/CSS/Items/utilities.css
+++ b/static/CSS/Items/utilities.css
@@ -35,6 +35,7 @@
   margin: 1.5rem;
   box-shadow: 0px 0px 6px -1px var(--font-color-secondary);
   transition-duration: 0.5s;
+  max-height: 360px;
 }
 
 .card h5 {
@@ -50,7 +51,9 @@
 }
 
 .card button {
-  width: 100%;
+  position: absolute;
+  bottom: 1rem;
+  width: calc(100% - 3rem);
   height: 44px;
   font-size: 2rem;
   font-weight: 700;
